# dhcp-lease-parser

./: .gitignore  README.md  default.nix  dhcp-lease-parser.cabal  diff1.txt  diff2.txt  shell.nix  stack.yaml
nix/haskell/: bytestring-encodings.nix  chronos.nix  ip.nix  prim-array.nix  quickcheck-classes.nix
sample/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt
src/: Dhcp.hs
src/Dhcp/: .Lease.hs.swo  Lease.hs  Load.hs  Parse.hs  Types.hs
test/: Leases.hs  Spec.hs
