cabal-version: 2.2
name:
  dhcp-lease-parser
version:
  0.2
homepage:
  https://github.com/andrewthad/dhcp-lease-parser
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Andrew Martin
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  chessai <chessai1996@gmail.com>
copyright:
  2017 Andrew Martin
category:
  Data,Parse,Utility
build-type:
  Simple
extra-source-files:
  README.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Dhcp.Parse
    Dhcp.Types
  build-depends:
    , base >= 4.7 && < 5
    , attoparsec >= 0.13 && < 0.14
    , bytestring >= 0.10 && < 0.11
    , chronos >= 1 && < 1.1
    , ip >= 1.4 && < 1.6
    , text >= 1.2 && < 1.3
    , unordered-containers >= 0.2 && < 0.3
  default-language:
    Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Leases
  build-depends:
    , base
    , bytestring
    , chronos
    , dhcp-lease-parser
    , ip
    , neat-interpolation
    , tasty
    , tasty-hunit
    , text
    , unordered-containers
source-repository head
  type:
    git
  location:
    https://github.com/andrewthad/dhcp-lease-parser
